--- a/services/package.json
+++ b/services/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "start": "^5.1.0"
+    "start": "^5.1.0",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
